force-app/main/default/objects/Field_Route__c/Field_Route__c.object-meta.xml
<CustomObject>
    <label>Field Route</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Route Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>