force-app/main/default/objects/Field_Route__c/fields/Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Completion_Notes__c</fullName>
    <label>Completion Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>