force-app/main/default/objects/Field_Route__c/fields/GPS_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coordinates__c</fullName>
    <label>GPS Coordinates</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>