force-app/main/default/objects/Field_Route__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <label>Installation</label>
    <referenceTo>Installation__c</referenceTo>
    <relationshipName>Field_Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>