force-app/main/default/objects/Field_Route__c/fields/Route_Date__c.field-meta.xml
<CustomField>
    <fullName>Route_Date__c</fullName>
    <label>Route Date</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>