force-app/main/default/objects/Field_Route__c/fields/Route_Status__c.field-meta.xml
<CustomField>
    <fullName>Route_Status__c</fullName>
    <label>Route Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>true</default></value>
            <value><fullName>Dispatched</fullName><default>false</default></value>
            <value><fullName>Completed</fullName><default>false</default></value>
            <value><fullName>Cancelled</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>