force-app/main/default/objects/Field_Route__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>Technician</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Routes</relationshipName>
</CustomField>